# haskell-nix

./: example.cabal  flake.nix  fourmolu.yaml  nix-snow.cabal  snowpkgs.nix
src/: Add.hs  Main.hs  Utils.hs
