cabal-version: 3.0
name:          nix-snow
version:       0.1.0
license:
author:        Mars
maintainer:    mars@pupbrained.xyz
build-type:    Simple

common warnings
  ghc-options: -Wall

executable nix_snow
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , qm-interpolated-string
    , split
    , relude
    , text-ansi

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  other-modules:    Paths_nix_snow
  hs-source-dirs:   src
  default-language: Haskell2010
